Use the -gpu option instead of -ta=tesla

--- a/C/openacc_fdtd/06_openacc5/Makefile
+++ b/C/openacc_fdtd/06_openacc5/Makefile
@@ -5,7 +5,7 @@ GCC  = gcc
 RM  = rm -f
 MAKEDEPEND = makedepend
 
-CFLAGS    = -O3 -acc -Minfo=accel  -ta=tesla,cc80,managed
+CFLAGS    = -O3 -acc -Minfo=accel  -gpu=cc80,managed
 GFLAGS    = -Wall -O3 
 CXXFLAGS  = $(CFLAGS)
 LDFLAGS   = 
